JDK, Spring Boot, Spring Framework 현행화
- JDK 25
- Spring Boot: 4.0.3
- Spring Framework: 7.0.5